--- a/apps/keyWords/view/Keyword/list.html
+++ b/apps/keyWords/view/Keyword/list.html
@@ -6,7 +6,7 @@
 <meta http-equiv="X-UA-Compatible" content="IE=Edge">
 <meta name="renderer" content="webkit">
 <meta name="viewport" content="width=device-width,initial-scale=1">
-<meta name="keywords" content="觅鱼">
+<meta name="keywords" content="{$subKeyWords}">
 <meta name="description" content="更懂你的实时优惠播报站-让优惠触手可及">
 <title>{$keyWord}_{$subtitle}</title>
 <link rel="dns-prefetch" href="https://guanjia.qq.com/">
