--- a/apps/keyWords/view/Keyword/item.html
+++ b/apps/keyWords/view/Keyword/item.html
@@ -114,7 +114,7 @@
 							<div class="clearfix"></div>
 						</div>
 						<div class="d-recommend-reason-content">
-							<div class="line1">只要9.9元超划算，还可参加""，大家觉得【手感很好】【和手机很搭】【材质不错】，最近买家说：好东西必须好评。颜色很正，跟红色版几乎差不多。手感很好，轻薄，媲美裸机手感。孔位精确。还送的有钢化膜。必须好评。</div>
+							<div class="line1">{if isset($reason)}{$reason}{/if}</div>
 							<div class="line2">
 								该商品共9607个评价， 好评率：99%， 其中好评9549， 中评42， 差评16 <span
 									class="line-href"><a
