--- a/apps/keyWords/view/Keyword/list.html
+++ b/apps/keyWords/view/Keyword/list.html
@@ -35,7 +35,7 @@
 					</ul>
 					<div class="recommend-category-update pull-right">
 						为您找到<span id="R-search-keywords" class="font-weight"></span>的搜索结果，共<span
-							id="R-search-num" class="font-weight">116</span>条
+							id="R-search-num" class="font-weight">{$count}</span>条
 					</div>
 					<div class="clearfix"></div>
 				</div>
