--- a/apps/keyWords/view/Keyword/list.html
+++ b/apps/keyWords/view/Keyword/list.html
@@ -57,7 +57,7 @@
 										<a target="_blank"
 											href="/goods/{$vo.nid|urlIdcode=###,true}.html"  itemId="{$vo.nid|urlIdcode=###,true}"
 											><img
-											src="{$vo.title}" class="size-110" style="margin: 11px;"></a>
+											src="{$taobao_img_url}{$vo.pictUrl}" class="size-110" style="margin: 11px;"></a>
 
 									</div>
 									<div class="feature-items-td-right">
