--- a/apps/index/view/index/index.html
+++ b/apps/index/view/index/index.html
@@ -9,20 +9,20 @@
 <meta name="keywords" content="{$title}">
 <meta name="description" content="{$description}">
 <title>{$title}</title>
-<link rel="dns-prefetch" href="https://guanjia.qq.com/">
-<link rel="stylesheet" href="/public/static/image/base.css">
-<link rel="stylesheet" href="/public/static/image/index.css">
+<link rel="dns-prefetch" href="{$host}">
+<link rel="stylesheet" href="/public/static/css/base.css">
+<link rel="stylesheet" href="/public/static/css/index.css">
 <script src="/public/static/js/jquery-3.2.1.min.js"></script>
 </head>
 
 <body>
 {include file="../../public/header" /}
 	<div id="container">
-	<div class="search bar1">
-		<form>
-			<input class="indexinput" type="text" placeholder="请输入您要搜索的内容...">
-			
-		</form>
+	<div class="search d1">
+	  <form class="indexForm">
+	  <input type="text" placeholder="输入关键词查询淘宝优惠券">
+	  <button type="submit"></button>
+	  </form>
 	</div>
 
 
