--- a/apps/index/view/index/itemcate.html
+++ b/apps/index/view/index/itemcate.html
@@ -9,9 +9,9 @@
 <meta name="keywords" content="">
 <meta name="description" content="更懂你的实时优惠播报站-让优惠触手可及">
 <title>{$cate_name}</title>
-<link rel="dns-prefetch" href="https://guanjia.qq.com/">
-<link rel="stylesheet" href="/public/static/image/base.css">
-<link rel="stylesheet" href="/public/static/image/item.css">
+<link rel="dns-prefetch" href="{$host}">
+<link rel="stylesheet" href="/public/static/css/base.css">
+<link rel="stylesheet" href="/public/static/css/item.css">
 <script src="/public/static/js/jquery-3.2.1.min.js"></script>
 <script src="/public/static/js/indexcate.js"></script>
 </head>
