--- a/apps/keyWords/view/Keyword/list.html
+++ b/apps/keyWords/view/Keyword/list.html
@@ -9,9 +9,9 @@
 <meta name="keywords" content="{$subKeyWords}">
 <meta name="description" content="更懂你的实时优惠播报站-让优惠触手可及">
 <title>{$keyWord}_{$subtitle}</title>
-<link rel="dns-prefetch" href="https://guanjia.qq.com/">
-<link rel="stylesheet" href="/public/static/image/base.css">
-<link rel="stylesheet" href="/public/static/image/result.css">
+<link rel="dns-prefetch" href="{$host}">
+<link rel="stylesheet" href="/public/static/css/base.css">
+<link rel="stylesheet" href="/public/static/css/result.css">
 <script src="/public/static/js/jquery-3.2.1.min.js"></script>
 <script src="/public/static/js/goods_list.js"></script>
 </head>
