--- a/apps/tryOut/view/articlecontroller/item.html
+++ b/apps/tryOut/view/articlecontroller/item.html
@@ -34,7 +34,7 @@ var item={$item.item.tryItemId|urlIdcode=###,true};
 								href="/"><span>当前位置：</span><span
 								class="crumbs-item-title">全部试用</span></a> <a
 								class="crumbs-item crumbs-item-1"
-								href="/goods/1_1.html"
+								href="/try/1_1.html"
 								target="_blank">&nbsp;&nbsp;&gt;&nbsp;&nbsp;<span
 								class="crumbs-item-title">{$cate.cate_name}</span></a>
 						</div>
