--- a/apps/keyWords/view/Keyword/list.html
+++ b/apps/keyWords/view/Keyword/list.html
@@ -115,7 +115,7 @@
 						<div class="pagination-cont">
 							<ul class="pagination" id="R-pagination">
 								{if $page.startPage!=$page.nowPage}
-								<li class="prev disabled"><a
+								<li class="prev"><a
 									href="/goods/{$keyword_id}_{$page.startPage}.html">&lt;</a></li>
 								{/if}
 								{foreach name="page.page" item="vo" }
