--- a/apps/tryOut/view/articlecontroller/list.html
+++ b/apps/tryOut/view/articlecontroller/list.html
@@ -6,12 +6,15 @@
 <meta http-equiv="X-UA-Compatible" content="IE=Edge">
 <meta name="renderer" content="webkit">
 <meta name="viewport" content="width=device-width,initial-scale=1">
-<meta name="keywords" content="{if isset($subKeyWords)}{$subKeyWords}{/if}">
+<meta name="keywords"
+	content="{if isset($subKeyWords)}{$subKeyWords}{/if}">
 <meta name="description" content="更懂你的实时优惠播报站-让优惠触手可及">
 <title>{$cate.cate_name}_{$subtitle}</title>
 <link rel="dns-prefetch" href="{$host}">
 <link rel="stylesheet" href="/public/static/css/base.css">
-<link rel="stylesheet" href="/public/static/css/trylist.css">
+
+<link rel="stylesheet" href="/public/static/css/article_global.css">
+<link rel="stylesheet" href="/public/static/css/article_list.css">
 <script src="/public/static/js/jquery-3.2.1.min.js"></script>
 <script src="/public/static/js/goods_list.js"></script>
 </head>
@@ -41,95 +44,130 @@
 				</div>
 			</div>
 		</div>
-		<div class="result-section">
-			<div class="main mt-15">
-				<div class="result-tab-container" id="R-result-content">
-					<div class="result-tab-content active" tab="1" id="R-god">
-						<div class="result-tab-pane">
-							<div class="feature-items">
-
-
-							{if is_array($list)}
-								{foreach $list as $vo}
-								
-								
-								<div class="feature-items-tr item" itemId="{$vo.itemId|urlIdcode=###,true}">
-									<div class="feature-items-td" index="0">
-										<a target="_blank"
-											href="/try/{$vo.id}.html"  itemId="{$vo.itemId|urlIdcode=###,true}"
-											><img
-											src="{$taobao_img_url}tfscom/{$vo.data.item.picUrl}" class="size-110" style="margin: 11px;"></a>
-
-									</div>
-									<div class="feature-items-td-right">
-										<div
-											class="feature-items-td-right-top">
-											
-											<div class="feature-items-td" index="1">
-												<div class="item_title">
-													 <a target="_blank"  itemId="{$vo.itemId|urlIdcode=###,true}"
-														href="/try/{$vo.id}.html"
-														 title="{$vo.data.item.title}">{$vo.data.item.title}</a>
-												</div>
-												
-										
-											</div>
-										
-										
-										
-										
-										
-										
-										
-										
-									</div>
-
-
-									
-								</div>
-
-
-
-							</div>
-
-							{/foreach}
-						{/if}
-
-						</div>
-						<div class="pagination-cont">
+		<div class="result-section" >
+			<div class="wrap_960">
+		<div class="fl_lt w648">
+			<div class="list_title">
+				<span><em>健康休闲</em></span><cite> <i>1/1</i>
+				</cite>
+			</div>
+			<div class="list_r">
+				<dl>
+					<dd>
+						<a href="http://www.haoshsh.com/article/read/id/1738.html"
+							title="舒适帆布鞋，轻松穿出街头活力范" target="_blank"><img
+							src="./健康休闲_健康休闲_券买买_files/5983d3df88b23.jpg"
+							alt="舒适帆布鞋，轻松穿出街头活力范" width="160"></a>
+					</dd>
+					<dt>
+						<span><a
+							href="http://www.haoshsh.com/article/read/id/1738.html"
+							title="舒适帆布鞋，轻松穿出街头活力范" target="_blank">舒适帆布鞋，轻松穿出街头活力范</a></span><cite>帆布鞋的好穿是众所周知的，除了寒冷的冬季之外，春夏秋三季都可穿搭。无论是男女，鞋柜里总不能好了一双好穿有好搭配的休闲帆布鞋，它可以让你时髦又充满街头感。<a
+							href="http://www.haoshsh.com/article/read/id/1738.html"
+							target="_blank">查看全文&gt;&gt;</a></cite>
+						<code>
+							<em>分类：</em><a
+								href="http://www.haoshsh.com/article/cate/id/4.html"
+								target="_blank" hidefocus="hidefocus">健康休闲</a><em>作者：</em>券买买<em>&nbsp;&nbsp;点击：</em>865<em>&nbsp;&nbsp;日期：</em>2017-08-04
+						</code>
+					</dt>
+				</dl>
+				<dl>
+					<dd>
+						<a href="http://www.haoshsh.com/article/read/id/1737.html"
+							title="热出新高度！火炉里如何避免原地“爆炸”" target="_blank"><img
+							src="./健康休闲_健康休闲_券买买_files/5982c091b92d7.jpg"
+							alt="热出新高度！火炉里如何避免原地“爆炸”" width="160"></a>
+					</dd>
+					<dt>
+						<span><a
+							href="http://www.haoshsh.com/article/read/id/1737.html"
+							title="热出新高度！火炉里如何避免原地“爆炸”" target="_blank" _hover-ignore="1">热出新高度！火炉里如何避免原地“爆炸”</a></span><cite>能出门见面的都是真爱，毕竟出门以后我们都是行走的“五花肉”，小编目睹邻居家的空调更新换代，原来没有的立马装上了，老旧的空调也立马换新了，这种天气没有空调真的是要被活活蒸熟的节奏，活脱脱的带动了一波“家电换新潮”。前几日小编家的冰箱阵亡了，为了吃到冰镇的西瓜，小编可是花了大心思找到了完美的新成员，好东西当然要给大家分享啦！<a
+							href="http://www.haoshsh.com/article/read/id/1737.html"
+							target="_blank">查看全文&gt;&gt;</a></cite>
+						<code>
+							<em>分类：</em><a
+								href="http://www.haoshsh.com/article/cate/id/4.html"
+								target="_blank" hidefocus="hidefocus">健康休闲</a><em>作者：</em>券买买<em>&nbsp;&nbsp;点击：</em>599<em>&nbsp;&nbsp;日期：</em>2017-08-03
+						</code>
+					</dt>
+				</dl>
+				<div class="pagination-cont" style="margin-top:30px">
 							<ul class="pagination" id="R-pagination">
-								{if $page.startPage!=$page.nowPage}
-								<li class="prev disabled"><a
-									href="/try/{$cate.cate_id}_{$page.startPage}.html">&lt;</a></li>
+								{if $pageList.startPage!=$pageList.nowPage}
+								<li class="prev"><a
+									href="/try/{$cateId}_{$pageList.startPage}.html">&lt;</a></li>
 								{/if}
-								{foreach name="page.page" item="vo" }
-								<li class="page {if $vo==$page.nowPage} active {/if}"><a
-									href="/try/{$cate.cate_id}_{$vo}.html">{$vo}</a></li>
+								{foreach name="$pageList.page" item="vo" }
+								<li class="page {if $vo==$pageList.nowPage} active {/if}"><a
+									href="/try/{$cateId}_{$vo}.html">{$vo}</a></li>
 								{/foreach}
-								{if $page.endPage!=$page.pageCount}
+								{if $pageList.endPage!=$pageList.pageCount}
 								<li class="next"><a
-									href="/try/{$cate.cate_id}_{$page.pageCount}.html">&gt;</a></li>
+									href="/try/{$cateId}_{$pageList.pageCount}.html">&gt;</a></li>
 								{/if}
 							</ul>
 						</div>
-					</div>
-					<div class="feature-sidebar">
-						<div class="feature-hot temai-section-top-color mb-20">
-							<div class="feature-hot-title font-title-16 pl-10">热门推荐</div>
-							<ul class="feature-hot-items" id="M-temai"></ul>
+			</div>
+		</div>
+		<div class="fl_rt w300">
+			<div class="rec-tuijian">
+				<div class="tuijian-tl">
+					<ul>
+						<li class="cur" index="0"><a href="javascript:;">最新推荐</a><i
+							class="xia-icon"></i></li>
+						
+					</ul>
+				</div>
+				<div class="tuijian-txt">
+					<ul class="r-tops">
+						<div class="top-ranks">
+							<a title="舒适帆布鞋，轻松穿出街头活力范"
+								href="http://www.haoshsh.com/article/read/id/1738.html"
+								target="_blank"><img
+								src="./健康休闲_健康休闲_券买买_files/5983d3df88b23.jpg"><span
+									class="rank-cons"><b>舒适帆布鞋，轻松穿出街头活力范</b>
+										<p>帆布鞋的好穿是众所周知的，除了寒冷的冬季之外，春夏秋三季都可穿搭。无论是男女，鞋柜里总不能好了一双好穿有好搭配的休闲帆布鞋，它可以让你时髦又充满街头感。</p></span></a>
 						</div>
-					</div>
-					<div class="fnClear"></div>
+						<li><a title="热出新高度！火炉里如何避免原地“爆炸”"
+							href="http://www.haoshsh.com/article/read/id/1737.html"
+							target="_blank">热出新高度！火炉里如何避免原地“爆炸”</a></li>
+					</ul>
 				</div>
-				<div class="result-tab-content" tab="2" id="R-cbg">
-					<div class="result-tab-pane">
-						<div class="feature-items"></div>
-					</div>
+				
+			</div>
+			
+			
+			
+			
+			<div class="rec-tuijian">
+				<div class="tuijian-tl">
+					<ul>
+						<li class="cur" index="0"><a href="javascript:;">精彩推荐</a><i
+							class="xia-icon"></i></li>
+						
+					</ul>
 				</div>
-				<div class="fnClear"></div>
+				<div class="tuijian-txt">
+					<ul class="r-tops">
+						<div class="top-ranks">
+							<a title="舒适帆布鞋，轻松穿出街头活力范"
+								href="http://www.haoshsh.com/article/read/id/1738.html"
+								target="_blank"><img
+								src="./健康休闲_健康休闲_券买买_files/5983d3df88b23.jpg"><span
+									class="rank-cons"><b>舒适帆布鞋，轻松穿出街头活力范</b>
+										<p>帆布鞋的好穿是众所周知的，除了寒冷的冬季之外，春夏秋三季都可穿搭。无论是男女，鞋柜里总不能好了一双好穿有好搭配的休闲帆布鞋，它可以让你时髦又充满街头感。</p></span></a>
+						</div>
+						<li><a title="热出新高度！火炉里如何避免原地“爆炸”"
+							href="http://www.haoshsh.com/article/read/id/1737.html"
+							target="_blank">热出新高度！火炉里如何避免原地“爆炸”</a></li>
+					</ul>
+				</div>
+				
 			</div>
 		</div>
 	</div>
+		</div>
 	</div>
 	{include file="../../public/footer" /}
 
