--- a/apps/tryOut/view/articlecontroller/item.html
+++ b/apps/tryOut/view/articlecontroller/item.html
@@ -34,7 +34,7 @@ var item={$item.item.tryItemId|urlIdcode=###,true};
 								href="/"><span>当前位置：</span><span
 								class="crumbs-item-title">全部试用</span></a> <a
 								class="crumbs-item crumbs-item-1"
-								href="/try/1_1.html"
+								href="/try/{$cate.id}_1.html"
 								target="_blank">&nbsp;&nbsp;&gt;&nbsp;&nbsp;<span
 								class="crumbs-item-title">{$cate.cate_name}</span></a>
 						</div>
@@ -48,7 +48,7 @@ var item={$item.item.tryItemId|urlIdcode=###,true};
 
 						</div>
 						<div class="d-top-content-right">
-							<div class="d-goods-title" _hover-ignore="1">{$item.item.title}</div>
+							<div class="d-goods-title" >{$item.item.title}</div>
 							<div class="d-goods-price">
 								<span
 									class="d-goods-price-origin mr-10 nowprice">现价:{$item.item.price}元</span>
